# llm-batch-classifier-public

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
examples/university-programs/: README.md  classify.yaml  prompt.txt  sample_input.csv
src/llm_classifier/: __init__.py  api.py  cli.py  config.py  data_io.py  identity.py  logging_utils.py  pipeline.py  rate_limiter.py  report.py  runner.py  validation.py
tests/: conftest.py  test_api.py  test_config.py  test_data_io.py  test_engine.py  test_pipeline.py  test_runner.py  test_validation.py
