[project]
name = "llm-batch-classifier"
version = "0.1.0"
description = "Production-grade LLM batch classification with rate limiting, checkpointing, and auto-retry"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["llm", "classification", "batch", "rate-limiting", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.9",
    "pandas>=2.0",
    "json-repair>=0.25",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
llm-classify = "llm_classifier.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_classifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
